--- a/style.css
+++ b/style.css
@@ -33,6 +33,21 @@ body {
     vertical-align: middle;
 }
 
+.friend-info {
+    color: greenyellow;
+    display: inline-block;
+    vertical-align: middle;
+}
+
+#user-container {
+    display: inline-block;
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+    background-size: 100%;
+    vertical-align: middle;
+}
+
 #profile-pic {
     display: inline-block;
     width: 100px;
@@ -92,7 +107,7 @@ button {
     border-radius: 6px;
     background-color: #27ae60;
     color: #ecf0f1;
-    font-size: 1vmax;
+    font-size: 16px;
     cursor: pointer;
 }
 
@@ -122,7 +137,46 @@ button {
     border-bottom: 1px solid #2c3e50;
 }
 
-.meat-text {
+.meat-container {
     padding: 1vw;
     font-size: 1vmax;
+    padding: 1vmax;
+    font-family: 'Nunito', sans-serif;
+}
+
+.meat-container>p {
+    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif
+
+}
+
+.dropup {
+    position: relative;
+    display: inline-block;
+}
+  
+.dropup-content {
+    display: none;
+    position: absolute;
+    bottom: 50px;
+    background-color: #f1f1f1;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+}
+  
+.dropup-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+}
+  
+.dropup-content a:hover {background-color: #ddd}
+  
+.dropup:hover .dropup-content {
+    display: block;
+}
+  
+.dropup:hover .dropbtn {
+    background-color: darkgreen;
 }
